feat: presistent mute/delete chat
